src/snapshots/human_date_parser__tests__parse_ago_10_hours_and_5_minutes_ago.snap
---
source: src/lib.rs
description: "Input: 10 hours and 5 minutes ago"
---
Ago > Duration
  - Quantifier
    - Num: "10"
    - Hour: "hours"
  - Quantifier
    - Num: "5"
    - Minute: "minutes"
