src/snapshots/human_date_parser__tests__parse_ago_10_seconds_ago.snap
---
source: src/lib.rs
description: "Input: 10 seconds ago"
---
Ago > Duration > Quantifier
  - Num: "10"
  - TimeUnit > Second: "seconds"
