src/snapshots/human_date_parser__tests__parse_ago_1_year_1_month_1_week_1_day_1_hour_1_minute_and_1_second_ago.snap
---
source: src/lib.rs
description: "Input: 1 year, 1 month, 1 week, 1 day, 1 hour, 1 minute and 1 second ago"
---
Ago > Duration
  - Quantifier
    - Num: "1"
    - TimeUnit > Year: "year"
  - Quantifier
    - Num: "1"
    - TimeUnit > Month: "month"
  - Quantifier
    - Num: "1"
    - TimeUnit > Week: "week"
  - Quantifier
    - Num: "1"
    - TimeUnit > Day: "day"
  - Quantifier
    - Num: "1"
    - TimeUnit > Hour: "hour"
  - Quantifier
    - Num: "1"
    - TimeUnit > Minute: "minute "
  - Quantifier
    - Num: "1"
    - TimeUnit > Second: "second "
