src/snapshots/human_date_parser__tests__parse_ago_2_hours_32_minutes_and_7_seconds_ago.snap
---
source: src/lib.rs
description: "Input: 2 hours, 32 minutes and 7 seconds ago"
---
Ago > Duration
  - Quantifier
    - Num: "2"
    - Hour: "hours"
  - Quantifier
    - Num: "32"
    - Minute: "minutes"
  - Quantifier
    - Num: "7"
    - Second: "seconds"
