src/snapshots/human_date_parser__tests__parse_date_02_03_2010.snap
---
source: src/lib.rs
description: "Input: 02 03 2010"
---
Date
  - Num: "02"
  - Num: "03"
  - Num: "2010"
