src/snapshots/human_date_parser__tests__parse_date_13_november.snap
---
source: src/lib.rs
description: "Input: 13 november"
---
Date
  - Num: "13"
  - Month_Name > November: "november"
