src/snapshots/human_date_parser__tests__parse_date_15_feb_2017.snap
---
source: src/lib.rs
description: "Input: 15 feb 2017"
---
Date
  - Num: "15"
  - Month_Name > February: "feb"
  - Num: "2017"
