src/snapshots/human_date_parser__tests__parse_date_1_2_2020.snap
---
source: src/lib.rs
description: "Input: 1 2 2020"
---
Date
  - Num: "1"
  - Num: "2"
  - Num: "2020"
