src/snapshots/human_date_parser__tests__parse_date_last_tuesday.snap
---
source: src/lib.rs
description: "Input: last tuesday"
---
Date
  - RelativeSpecifier > Last: "last"
  - Weekday > Tuesday: "tuesday"
