src/snapshots/human_date_parser__tests__parse_date_next_friday.snap
---
source: src/lib.rs
description: "Input: next friday"
---
Date
  - RelativeSpecifier > Next: "next"
  - Weekday > Friday: "friday"
