src/snapshots/human_date_parser__tests__parse_date_this_monday.snap
---
source: src/lib.rs
description: "Input: this monday"
---
Date
  - RelativeSpecifier > This: "this"
  - Weekday > Monday: "monday"
